Finished menu desktop

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
     </div>
     <nav id="navbar">
       <ul>
-        <li><a  href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit</a></li>
+        <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
+          <ul class="dropdown-menu">
+          <li></i> <a href="#"><i class="fas fa-images"></i>Exhibitions</a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-binoculars"></i>Explore</a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-landmark"></i>The museum</a>
+          </li></ul> </li>
         <li><a href="get-involved.html"><i aria-hidden="true" class="fas fa-hands-helping"></i>Get involved</a></li>
         <li><a href="contact.html"><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a></li>
       </ul>
