--- a/exhibitions.html
+++ b/exhibitions.html
@@ -67,7 +67,7 @@
     <main>  
     <h1>Exhibitions</h1>
     <div class="wrapper">
-        <div>
+        <article>
            <!-- <div class="exhibition">-->
             <div class="exhibition-info">
               <h2>The era of robots</h2>
@@ -76,7 +76,7 @@
             </div>
          <!--   </div> -->
             <div class="exhibition-brief">
-              <div>
+           <div>
                 <div class="exhibition-brief-specs">
                     <i class="fas fa-thumbs-up"></i>
                     <p>7 - 15 years old</p>
@@ -91,9 +91,10 @@
                 </div>
               </div>
             </div>
-          </div>
-        <div>
+       <!--   </div> -->
+        </article>
        <!--   <div class="exhibition ecology"> -->
+         <article>
         <div class="exhibition-info">
             <h2>Time to change</h2>
             <img alt="Chalkboard reading 'Go green' on leaf background" src="/images/exhibitions/green-gdb8c0fe8a_1280.jpg">
@@ -116,9 +117,11 @@
               </div>
             </div>
           </div>
-        </div>
-        <div>
+    </div> 
+    <!--    <div> -->
+        </article>
       <!--    <div class="exhibition cosmology"> -->
+      <article>
         <div class="exhibition-info">
             <h2>The sky above us</h2>
             <img alt="Picture of the solar system" src="/images/exhibitions/solar-system-439046_1920.jpg">
@@ -140,9 +143,11 @@
               </div>
             </div>
           </div>
-        </div>
-        <div>
+   <!--     </div>
+        <div> -->
      <!--     <div class="exhibition bio-and-med"> -->
+    </article>
+  <article>
       <div class="exhibition-info">
             <h2>The micro world</h2>
             <img alt="Blue cells seen through a microscope in dark background" src="/images/exhibitions/bacteria-g75a919072_1920.jpg">
@@ -165,9 +170,10 @@
               </div>
             </div>
           </div>
-        </div>
-        <div>
+   <!--     </div>
+        <div> -->
    <!--       <div class="exhibition evolution"> -->
+  <article>
     <div class="exhibition-info">
             <h2>Bones talk</h2>
             <img alt="Tyrannosaurus rex" src="/images/exhibitions/landscape-3969074_1280.jpg">
@@ -190,11 +196,12 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <section class="wrapper">
+        </article>
+  <!--      </div>
+      </div> -->
+      
     </main>
-    <footer>
+    <footer class="wrapper">
       <div class="newsletter">
         <div>
           <p>subscribe to our newsletter</p>
