Footer all pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="home">
         <a href="index.html"><img alt="Community science museum logo"
-          class="logo" src="images/logo-dos-desktop.png"/></a>
+          class="logo" src="images/logo-desktop.png"/></a>
 
       <a aria-label="Open main menu" class="hamburger" href="#navbar">
       <span class="sr-only">Open main menu</span>
@@ -36,13 +36,13 @@
       <ul>
         <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
           <ul class="dropdown-menu">
-          <li></i> <a href="#"><i class="fas fa-images"></i>Exhibitions</a>
+          <li></i> <a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
           </li>
           <li>
-            <a href="#"><i class="fas fa-binoculars"></i>Explore</a>
+            <a href="explore.html"><i class="fas fa-binoculars"></i>Explore</a>
           </li>
           <li>
-            <a href="#"><i class="fas fa-landmark"></i>The museum</a>
+            <a href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a>
           </li></ul> </li>
         <li><a href="get-involved.html"><i aria-hidden="true" class="fas fa-hands-helping"></i>Get involved</a></li>
         <li><a href="contact.html"><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a></li>
@@ -321,7 +321,7 @@
       <form method="post" class="newsletter">
             <div class="newsletter-field">
             <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
-            <input class="newsletter-contact-field" type="email" required id="email" placeholder="example@email.com" />
+            <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
             </div>
             <div class="cta-newsletter">
             <input type="submit" value="Send" class="cta cta-submit" />
@@ -338,30 +338,6 @@
         </ul>
         </div>
       </div> 
-  <!--    <div>
-        <div>
-          <p>subscribe to our newsletter</p>
-          <form class="newsletter" method="post">
-            <div>
-               <input class="form" type="email" placeholder="Email address" />
-            </div>
-            <div class="newsletter-cta">
-              <input class="cta cta-submit" type="submit" value="send" />
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="socials">
-        <p>follow us on social media</p>
-        <div >
-          <ul class="socials-icons">
-            <li><a aria-label="Tik tok" href="#"><i aria-hidden="true" class="fab fa-tiktok" ></i></a></li>
-            <li><a aria-label="Youtube" href="#"><i aria-hidden="true" class="fab fa-youtube"></i></a></li>
-            <li><a aria-label="Instagram" href="#"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-            <li><a aria-label="Facebook" href="#"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
-        </ul>
-        </div>
-      </div> -->
       <p class="copyright">&#169 Copyright 2021</p>
     </footer>
   </body>
