--- a/explore.html
+++ b/explore.html
@@ -25,44 +25,33 @@
   </head>
   <body>
     <header>
-      <div>
-      <a href="index.html"
-          ><img
-            alt="Community science museum logo"
-            class="logo"
-            src="images/logo-mobile.png"
-        /></a>
-      </div>
-      <div>
-      <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
-      <input type="checkbox" id="hamburger-menu">
-      <nav>
-          <ul>
-            <li><span></i> <a class="hidden-item-large-screen" href="#"><i class="fas fa-images"></i>Exhibitions</a></span>
-            </li>
-            <li>
-              <span>
-              <a class="hidden-item-large-screen" href="#"><i class="fas fa-binoculars"></i>Explore</a></span>
-            </li>
-            <li>
-              <span><a class="hidden-item-large-screen" href="#"><i class="fas fa-landmark"></i>The museum</a></span>
-            </li> 
-            <li>
-              <span><label class="plan-your-visit-label hidden-item-small-screen display-item-large-screen" for="plan-your-visit-menu"><input type="checkbox" id="plan-your-visit-menu"><a href="#"><i class="fas fa-tasks"></i>Plan your visit</a></span></label>
-              <div class="plan-your-visit-items">
-                <span></i> <a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-images"></i>Exhibitions</a></span>
-                  <span><a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-binoculars"></i>Explore</a></span>
-                    <span><a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-landmark"></i>The museum</a></span>
-              </div>
-            </li>
-            <li><span><a href="#"><i class="fas fa-hands-helping"></i>Get involved</a></span>
-            </li>
-            <li><span>
-              <a href="#"><i class="fas fa-question-circle"></i>Who we are</a></span>
-            </li>
-          </ul>
-      </nav>
+      <div class="home">
+        <a href="index.html"><img alt="Community science museum logo"
+          class="logo" src="images/logo-desktop.png"/></a>
+
+      <a aria-label="Open main menu" class="hamburger" href="#navbar">
+      <span class="sr-only">Open main menu</span>
+    <i aria-hidden="true" class="fas fa-bars"></i></a>
     </div>
+    <nav id="navbar">
+      <ul>
+        <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
+          <ul class="dropdown-menu">
+          <li></i> <a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
+          </li>
+          <li>
+            <a href="explore.html"><i class="fas fa-binoculars"></i>Explore</a>
+          </li>
+          <li>
+            <a href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a>
+          </li></ul> </li>
+        <li><a href="get-involved.html"><i aria-hidden="true" class="fas fa-hands-helping"></i>Get involved</a></li>
+        <li><a href="contact.html"><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a></li>
+      </ul>
+      <a aria-label="Close main menu" class="close" href="#">
+        <span class="sr-only">Close main menu</span>
+      <i aria-hidden="true" class="fas fa-times"></i></a>
+    </nav>
   </header>
     <main>
       <section>
@@ -141,26 +130,26 @@
       </section>
     </main>
     <footer>
-      <div class="newsletter">
-        <div>
-          <p>subscribe to our newsletter</p>
-          <form method="post">
-          <input class="form" type="email" placeholder="Email address" />
-          <div>
-          <input class="cta cta-submit" type="submit" value="send" />
-        </div>
-        </form>
-        </div>
-      </div>
+      <form method="post" class="newsletter">
+            <div class="newsletter-field">
+            <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
+            <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
+            </div>
+            <div class="cta-newsletter">
+            <input type="submit" value="Send" class="cta cta-submit" />
+          </div>
+      </form>
       <div class="socials">
         <p>follow us on social media</p>
-        <div>
-          <i class="fab fa-tiktok"></i>
-          <i class="fab fa-youtube"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-square"></i>
+        <div >
+          <ul class="socials-icons">
+            <li><a aria-label="Tik tok" href="#"><i aria-hidden="true" class="fab fa-tiktok" ></i></a></li>
+            <li><a aria-label="Youtube" href="#"><i aria-hidden="true" class="fab fa-youtube"></i></a></li>
+            <li><a aria-label="Instagram" href="#"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
+            <li><a aria-label="Facebook" href="#"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
+        </ul>
         </div>
-      </div>
+      </div> 
       <p class="copyright">&#169 Copyright 2021</p>
     </footer>
   </body>
