--- a/contact.html
+++ b/contact.html
@@ -115,11 +115,14 @@
                 <label for="pop-up-cta" class="cta">send</label>
                 <input type="checkbox" id="pop-up-cta" />
                 <div class="popup-box">
+                  <img src="/images/Icon awesome-parachute-box.svg">
+                  <div class="message">
                   <h2>Thank you for your mesage</h2>
                   <p>
                     We will get back to you as soon as possible
                   </p>
                   <i class="fas fa-smile-beam"></i>
+                </div>
                 </div>
               </div>
           </div>
