--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
                 <label for="pop-up-cta" class="cta">send</label>
                 <input type="checkbox" id="pop-up-cta" />
                 <div class="popup-box">
-                  <img src="/images/Icon awesome-parachute-box.svg">
+                  <img src="/images/Icon ionic-md-rocket.svg">
                   <div class="message">
-                  <h2>Thank you for your mesage</h2>
+                  <h2>Thank you for your message</h2>
                   <p>
                     We will get back to you as soon as possible
                   </p>
