Feedback (rocket) contact form

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
                 <label for="pop-up-cta" class="cta">send</label>
                 <input type="checkbox" id="pop-up-cta" />
                 <div class="popup-box">
-                  <img src="/images/Icon ionic-md-rocket.svg">
+                  <img src="/images/rocket.svg">
                   <div class="message">
                   <h2>Thank you for your message</h2>
                   <p>
