Removed method from form and newsletter, remved smiley face from message, adjusted link in text in museum page, changed text in newsletter button

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
       </section>-->
    <!--   <section>
         <h2>Get in touch</h2> -->
-        <form method="post" class="contact-form">
+        <form method="" class="contact-form">
           <div class="form-field">
             <label class="contact-heading" for="name">Name and surname</label>
             <input class="contact-field" type="text" required id="name" placeholder="Melisa Zorraindo" />
@@ -121,7 +121,6 @@
                   <p>
                     We will get back to you as soon as possible
                   </p>
-                  <i class="fas fa-smile-beam"></i>
                 </div>
                 </div>
               </div>
@@ -130,13 +129,13 @@
   <!--    </section> -->
 </main>
 <footer>
-  <form method="post" class="newsletter">
+  <form method="" class="newsletter">
         <div class="newsletter-field">
         <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
         <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
         </div>
         <div class="cta-newsletter">
-        <input type="submit" value="Send" class="cta cta-submit" />
+        <input type="submit" value="sign up" class="cta cta-submit" />
       </div>
   </form>
   <div class="socials">
