--- a/explore.html
+++ b/explore.html
@@ -93,7 +93,7 @@
         <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, <a class="link-in-text" href="#">send us a message.</a> 
         </p>
       </section>
-  <!--    <hr> -->
+  
       <section>
         <h2>For teachers</h2>
         <div class="image-wrapper">
@@ -111,7 +111,7 @@
         </p>
         <p>Please <a class="link-in-text" href="#">get in touch with us here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
         </section>
-      <!--  <hr> -->
+    
         <section>
         <h2>For researchers</h2>
         <div class="image-wrapper">
@@ -130,13 +130,13 @@
       </section>
     </main>
     <footer>
-      <form method="post" class="newsletter">
+      <form method="" class="newsletter">
             <div class="newsletter-field">
             <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
             <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
             </div>
             <div class="cta-newsletter">
-            <input type="submit" value="Send" class="cta cta-submit" />
+            <input type="submit" value="sign up" class="cta cta-submit" />
           </div>
       </form>
       <div class="socials">
