--- a/get-involved.html
+++ b/get-involved.html
@@ -72,7 +72,6 @@
         </p>
         <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by <a class="link-in-text" href="#">contacting our Collections Department</a> and they will be able to assist you.</p>
       </section>
-        <hr>
         <section>
         <h2>Volunteer</h2>
         <div class="image-wrapper">
@@ -91,7 +90,6 @@
         <p>You can help volunteer in a number of different spheres. Please <a class="link-in-text" href="#">contact us</a> if you’d like to find out more about how you can get involved.
         </p>
       </section>
-        <hr>
         <section>
         <h2>Internships</h2>
         <div class="image-wrapper">
@@ -113,13 +111,13 @@
       </section>
 </main>
 <footer>
-  <form method="post" class="newsletter">
+  <form method="" class="newsletter">
         <div class="newsletter-field">
         <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
         <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
         </div>
         <div class="cta-newsletter">
-        <input type="submit" value="Send" class="cta cta-submit" />
+        <input type="submit" value="sign up" class="cta cta-submit" />
       </div>
   </form>
   <div class="socials">
