--- a/index.html
+++ b/index.html
@@ -318,13 +318,13 @@
       </aside>
     </main>
     <footer>
-      <form method="post" class="newsletter">
+      <form method="" class="newsletter">
             <div class="newsletter-field">
             <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
             <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
             </div>
             <div class="cta-newsletter">
-            <input type="submit" value="Send" class="cta cta-submit" />
+            <input type="submit" value="sign up" class="cta cta-submit" />
           </div>
       </form>
       <div class="socials">
