--- a/the-museum.html
+++ b/the-museum.html
@@ -86,13 +86,13 @@
         <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
     </main>
     <footer>
-      <form method="post" class="newsletter">
+      <form method="" class="newsletter">
             <div class="newsletter-field">
             <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
             <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
             </div>
             <div class="cta-newsletter">
-            <input type="submit" value="Send" class="cta cta-submit" />
+            <input type="submit" value="sign up" class="cta cta-submit" />
           </div>
       </form>
       <div class="socials">
