Added targets and scroll behaviour

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <div>
             <div class="exhibition-brief-cta">
-              <a class="cta cta-large" href="exhibitions.html">view</a>
+              <a class="cta cta-large" href="exhibitions.html#robotics">view</a>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="exhibitions.html">view</a>
+                <a class="cta" href="exhibitions.html#ecology">view</a>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="exhibitions.html">view</a>
+                <a class="cta" href="exhibitions.html#cosmology">view</a>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="exhibitions.html">View</a>
+                <a class="cta" href="exhibitions.html#biology">View</a>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="exhibitions.html">View</a>
+                <a class="cta" href="exhibitions.html#evolution">View</a>
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
                 Are you a young person looking to learn more about science?
                 Let's learn together
               </p>
-              <a class="cta" href="explore.html">view</a>
+              <a class="cta" href="explore.html#children">view</a>
             </div>
           </div>
         </div>
@@ -219,7 +219,7 @@
                 We want to work with schools to create places of learning and
                 exploring.
               </p>
-              <a class="cta" href="explore.html">view</a>
+              <a class="cta" href="explore.html#teachers">view</a>
             </div>
           </div>
         </div>
@@ -238,7 +238,7 @@
                 Are you looking to get involved with our team of researchers and
                 academics? Join us.
               </p>
-              <a class="cta" href="explore.html">view</a>
+              <a class="cta" href="explore.html#researchers">view</a>
             </div>
           </div>
         </div>
