--- a/exhibitions.html
+++ b/exhibitions.html
@@ -56,7 +56,7 @@
     <main>  
     <h1>Exhibitions</h1>
     <div class="wrapper">
-        <article>
+        <article id="robotics">
            <!-- <div class="exhibition">-->
             <div class="exhibition-info">
               <h2>The era of robots</h2>
@@ -83,7 +83,7 @@
        <!--   </div> -->
         </article>
        <!--   <div class="exhibition ecology"> -->
-         <article>
+         <article id="ecology">
         <div class="exhibition-info">
             <h2>Time to change</h2>
             <img alt="Chalkboard reading 'Go green' on leaf background" src="/images/exhibitions/green-gdb8c0fe8a_1280.jpg">
@@ -110,7 +110,7 @@
     <!--    <div> -->
         </article>
       <!--    <div class="exhibition cosmology"> -->
-      <article>
+      <article id="cosmology">
         <div class="exhibition-info">
             <h2>The sky above us</h2>
             <img alt="Picture of the solar system" src="/images/exhibitions/solar-system-439046_1920.jpg">
@@ -136,7 +136,7 @@
         <div> -->
      <!--     <div class="exhibition bio-and-med"> -->
     </article>
-  <article>
+  <article id="biology">
       <div class="exhibition-info">
             <h2>The micro world</h2>
             <img alt="Blue cells seen through a microscope in dark background" src="/images/exhibitions/bacteria-g75a919072_1920.jpg">
@@ -162,7 +162,7 @@
    <!--     </div>
         <div> -->
    <!--       <div class="exhibition evolution"> -->
-  <article>
+  <article id="evolution">
     <div class="exhibition-info">
             <h2>Bones talk</h2>
             <img alt="Tyrannosaurus rex" src="/images/exhibitions/landscape-3969074_1280.jpg">
