Linked to contact page

--- a/the-museum.html
+++ b/the-museum.html
@@ -75,7 +75,7 @@
         <p class="paragraph-break">There are guided tours of the museum that leave every hour. These tours are<span
             itemprop="price" content="70"> 70 </span><span itemprop="priceCurrency" content="NOK">NOK</span> per person and include a handy printed guide of the museum. 
         </p>
-        <p>If you would like to organise a guided tour for your group of 6 or more people, please <a class="link-in-text" href="#">contact us</a> to arrange the tour.</p>
+        <p>If you would like to organise a guided tour for your group of 6 or more people, please <a class="link-in-text" href="/contact.html">contact us</a> to arrange the tour.</p>
         <h3><i class="fas fa-wheelchair"></i>Accessibility</h3>
         <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
         <h3><i class="fas fa-utensils"></i>Food & drinks</h3>
