--- a/get-involved.html
+++ b/get-involved.html
@@ -70,7 +70,7 @@
         </div>
         <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
         </p>
-        <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by <a class="link-in-text" href="#">contacting our Collections Department</a> and they will be able to assist you.</p>
+        <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by <a class="link-in-text" href="/contact.html">contacting our Collections Department</a> and they will be able to assist you.</p>
       </section>
         <section>
         <h2>Volunteer</h2>
@@ -87,7 +87,7 @@
         </div>
         <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
         </p>
-        <p>You can help volunteer in a number of different spheres. Please <a class="link-in-text" href="#">contact us</a> if you’d like to find out more about how you can get involved.
+        <p>You can help volunteer in a number of different spheres. Please <a class="link-in-text" href="/contact.html">contact us</a> if you’d like to find out more about how you can get involved.
         </p>
       </section>
         <section>
@@ -107,7 +107,7 @@
         </p>
         <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
         </p>
-        <p>Please <a class="link-in-text" href="#">get in touch with us here</a> to ask for an application form.</p>
+        <p>Please <a class="link-in-text" href="/contact.html">get in touch with us here</a> to ask for an application form.</p>
       </section>
 </main>
 <footer>
