--- a/exhibitions.html
+++ b/exhibitions.html
@@ -60,7 +60,9 @@
            <!-- <div class="exhibition">-->
             <div class="exhibition-info">
               <h2>The era of robots</h2>
-              <img alt="Tin robot running towards camera in devastated world" src="/images/exhibitions/fantasy-gbc661e0be_1280.jpg">
+              <div class="image-container">
+              <img alt="Tin robot running towards camera in devastated world" class="image" src="/images/exhibitions/fantasy-gbc661e0be_1280.jpg">
+            </div>
               <p class="exhibition-paragraph">The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
             </div>
          <!--   </div> -->
@@ -86,7 +88,9 @@
          <article id="ecology">
         <div class="exhibition-info">
             <h2>Time to change</h2>
-            <img alt="Chalkboard reading 'Go green' on leaf background" src="/images/exhibitions/green-gdb8c0fe8a_1280.jpg">
+            <div class="image-container">
+            <img alt="Chalkboard reading 'Go green' on leaf background" class="image image-two" src="/images/exhibitions/green-gdb8c0fe8a_1280.jpg">
+            </div>
             <p  class="exhibition-paragraph">As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.</p>
             </div>
       <!--    </div> -->
@@ -106,14 +110,16 @@
               </div>
             </div>
           </div>
-    </div> 
+   
     <!--    <div> -->
         </article>
       <!--    <div class="exhibition cosmology"> -->
       <article id="cosmology">
         <div class="exhibition-info">
             <h2>The sky above us</h2>
-            <img alt="Picture of the solar system" src="/images/exhibitions/solar-system-439046_1920.jpg">
+            <div class="image-container">
+            <img alt="Picture of the solar system" class="image image-three" src="/images/exhibitions/solar-system-439046_1920.jpg">
+            </div>
             <p  class="exhibition-paragraph">Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
           </div>
           <div class="exhibition-brief">
@@ -139,7 +145,9 @@
   <article id="biology">
       <div class="exhibition-info">
             <h2>The micro world</h2>
-            <img alt="Blue cells seen through a microscope in dark background" src="/images/exhibitions/bacteria-g75a919072_1920.jpg">
+            <div class="image-container">
+            <img alt="Blue cells seen through a microscope in dark background" class="image" src="/images/exhibitions/bacteria-g75a919072_1920.jpg">
+            </div>
             <p  class="exhibition-paragraph">From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. Come and see some fascinating tiny creatures in our lab.</p>
           </div>
      <!--     </div> -->
@@ -165,7 +173,9 @@
   <article id="evolution">
     <div class="exhibition-info">
             <h2>Bones talk</h2>
-            <img alt="Tyrannosaurus rex" src="/images/exhibitions/landscape-3969074_1280.jpg">
+            <div class="image-container">
+            <img alt="Tyrannosaurus rex" class="image image-five" src="/images/exhibitions/landscape-3969074_1280.jpg">
+            </div>
             <p class="exhibition-paragraph">Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
           </div>
      <!--     </div> -->
@@ -188,7 +198,7 @@
         </article>
   <!--      </div>
       </div> -->
-      
+    </div>  
     </main>
     <footer>
       <form method="" class="newsletter">
