--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,19 @@
           <div class="contact-intro">
             <p>Please get in touch with us using the form below.</p>
             <p>We do our best to reply within 24 hours.</p>
-          </div>
-          <div class="form-field">
+        </div>
+     <!--       <div class="form-field"> -->
             <label class="contact-heading" for="name">Name and surname</label>
             <input class="contact-field" type="text"  id="name" placeholder="Melisa Zorraindo" />
-            </div>
-            <div class="form-field">
+   <!--         </div>
+            <div class="form-field"> -->
                <label class="contact-heading" for="email">Email</label>
                <input class="contact-field email" type="email"  id="email" placeholder="example@email.com" />
                <div class="contact-message">
                   <small><i class="fas fa-lock"></i></small>
                   <small>We don't send spam to our users</small>
                </div>
-            </div>
+      <!--      </div> -->
             <label class="contact-heading" for="subject" >Please select the subject</label>
             <select name="subject" id="subject-option" class="contact-field">
               <option value="young-stars-club">join the Young Stars club</option>
@@ -81,11 +81,11 @@
                 <option value="volunteer">volunteer</option>
                 <option value="internship">apply for an internship</option>
             </select>
-            <div class="form-field">
+            <div class="form-field"> 
             <label class="contact-heading" for="message">Message</label>
             <textarea id="message"></textarea>
-            </div>
-            <div class="cta-form">
+        <!--   </div> -->
+            <div class="cta-form"> 
                 <label for="pop-up-cta" class="cta">send</label>
                 <input type="checkbox" id="pop-up-cta" />
                 <div class="popup-box">
@@ -97,9 +97,9 @@
                     We will get back to you as soon as possible
                   </p>
                 </div>
-                </div>
               </div>
-          </div>
+               </div>
+         </div>
         </form>
 </main>
 <footer>
