--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <aside>
         <h2>News</h2>
         <div class="news">
-          <div class="slider">
+          <div class="slider" id="news-one">
           <h3>visiting professor of aeronautics</h3>
           <p class="news-info">
             It is our pleasure to announce that Prof Sheila Widnall from the
@@ -269,7 +269,7 @@
             </div>
           </div>
         </div>
-        <div class="slider">
+        <div class="slider" id="news-two">
           <h3>night in the museum</h3>
           <p class="news-info">
             Get your family together for an exciting night in the museum as you
@@ -292,7 +292,7 @@
             </div>
           </div>
         </div>
-        <div class="slider">
+        <div class="slider" id="news-three">
           <h3>energetica exhibition on loan</h3>
           <p class="news-info">
             On loan from the NEMO Science Museum in Amsterdam, the Energetica
@@ -315,6 +315,11 @@
           </div>
         </div>
         </div>
+        <div class="carousel-links">
+        <a href="#news-one">1</a>
+        <a href="#news-two">2</a>
+        <a href="#news-three">3</i></a>
+      </div>
       </aside>
     </main>
     <footer>
