Started with media queries

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
       <section class="wrapper">
         <h2>Explore</h2>
-        <div>
+        <div class="explore-section-heading">
           <h3>for children</h3>
           <div class="explore">
             <div class="explore-picture">
@@ -204,7 +204,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="explore-section-heading">
           <h3>for teachers</h3>
           <div class="explore">
             <div class="explore-picture">
